--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-POSTGRES_URL="postgresql://shashank:Horsham59*@localhost:5432/oink"
-POSTGRES_PRISMA_URL="postgresql://shashank:Horsham59*@localhost:5432/oink?pgbouncer=true&connect_timeout=15"
-POSTGRES_URL_NON_POOLING="postgresql://shashank:Horsham59*@localhost:5432/oink"
-POSTGRES_USER="shashank"
-POSTGRES_HOST="localhost"
-POSTGRES_PASSWORD="Horsham59*"
-POSTGRES_DATABASE="oink"
+POSTGRES_URL=
+POSTGRES_PRISMA_URL=
+POSTGRES_URL_NON_POOLING=
+POSTGRES_USER=
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
