--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "latest",
     "react-day-picker": "^8.9.1",
     "react-dom": "latest",
+    "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.46.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
